tests/fa/errors/undefined_ident_fa.salam
// EXPECT: خطا۰۰۱
// LANG: fa
تابع اصلی:
    چاپ ناشناخته
پایان
